# capnp2arrow

./: Cargo.toml  LICENSE  README.md  build.rs
src/: array.rs  arrow_field.rs  deserialize.rs  field.rs  lib.rs  main.rs  reader.rs  schema.rs  test.rs  zipped_field.rs
src/schema/: point.capnp
tests/: integration_test.rs  schema_test.rs  union_test.rs  zipped_field_test.rs
