[package]
name = "capnp2arrow"
version = "0.1.0"
authors = ["Colin Jermain"]
description = "Cap'N Proto to Arrow data transfer"
homepage = "https://github.com/cjermain/capnp2arrow"
license = "MIT"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
capnpc = "0.17.1"

[dependencies]
capnp = "0.17.0"
# arrow2 = "0.17.2"
indexmap = "1.9.3"

[dependencies.arrow2]
# git = "https://github.com/jorgecarleitao/arrow2"
# rev = "0d568a38850176d710523771a3a8c14b3d93b9ba"
git = "https://github.com/cjermain/arrow2"
rev = "67312c3dfd3e93b22194c41388cfeb7c8a608436"
