[package]
name = "capnp2arrow"
version = "0.1.0"
authors = ["Colin Jermain"]
description = "Cap'N Proto to Arrow data transfer"
homepage = "https://github.com/cjermain/capnp2arrow"
license = "MIT"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

edition = "2021"

[build-dependencies]
capnpc = "0.19.0"

[dev-dependencies]
smartstring = "1.0.1"

[dependencies]
capnp = "0.19.1"

[dependencies.polars]
version = "0.38.1"
features = ["dtype-struct", "dtype-i8", "dtype-i16", "dtype-u8", "dtype-u16", "dtype-categorical", "rows"]

[dependencies.polars-arrow]
version = "0.38.1"
