[package]
name = "capnp2arrow"
version = "0.1.0"
authors = ["Colin Jermain"]
description = "Cap'N Proto to Arrow data transfer"
homepage = "https://github.com/cjermain/capnp2arrow"
license = "MIT"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
capnpc = "0.25.0"

[dependencies]
capnp = "0.25.0"
# arrow2 = "0.17.2"
indexmap = "1.9.3"

[dependencies.arrow2]
# git = "https://github.com/jorgecarleitao/arrow2"
# rev = "3ab9b61f0ec6656d4613ad077c87bad6fac4682d"
git = "https://github.com/ritchie46/arrow2"
branch = "polars_2023-06-26"

[dependencies.polars-arrow]
git = "https://github.com/pola-rs/polars"
rev = "263ba5153dd3cd03b9f67f5f2de06af19df0529c"

[dependencies.polars]
git = "https://github.com/pola-rs/polars"
rev = "263ba5153dd3cd03b9f67f5f2de06af19df0529c"
features = ["dtype-struct"]
